syntax = "proto3";

option csharp_namespace = "BowlingGrpcClient";

package greet;

// The greeting service definition.
service Player {
  rpc GetAll (GetAllRequest) returns (GetAllReply);
  rpc GetById (GetByIdRequest) returns (GetByIdReply);
}

message GetAllRequest {
	int32 page = 1;
	int32 nbPlayers = 2;
}

message GetAllReply {
	repeated PlayerGRPC playerGRPC = 1;
}

message GetByIdRequest {
	int32 id = 1;
}

message GetByIdReply {
	PlayerGRPC playerGRPC = 1;
}

message PlayerGRPC {
	int32 id = 1;
	string name = 2;
	string image = 3;
}
